--- a/pom.xml
+++ b/pom.xml
@@ -175,7 +175,7 @@
             <plugin>
                 <groupId>com.gluonhq</groupId>
                 <artifactId>gluonfx-maven-plugin</artifactId>
-                <version>1.0.22</version>
+                <version>1.0.23</version>
                 <configuration>
                     <target>host</target>
                     <mainClass>com.uiptv.ui.RootApplication</mainClass>
@@ -183,6 +183,7 @@
                     <resourcesList>
                         <list>org/sqlite/native/${platform}/${sqlite.arch}/.*</list>
                     </resourcesList>
+                    <graalvmHome>/Users/younas/apps/programs/graalvm-jdk/Contents/Home</graalvmHome>
                     <jniList>
                         <list>org.sqlite.core.DB</list>
                         <list>org.sqlite.core.NativeDB</list>
