max osx bug fix for server port not working fixes for mac osx compilation. work in progress

--- a/pom.xml
+++ b/pom.xml
@@ -183,7 +183,7 @@
                     <resourcesList>
                         <list>org/sqlite/native/${platform}/${sqlite.arch}/.*</list>
                     </resourcesList>
-                    <graalvmHome>/Users/younas/apps/programs/graalvm-jdk/Contents/Home</graalvmHome>
+                    <graalvmHome>~/apps/programs/graalvm-jdk/Contents/Home</graalvmHome>
                     <jniList>
                         <list>org.sqlite.core.DB</list>
                         <list>org.sqlite.core.NativeDB</list>
