--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
         <maven.compiler.release>17</maven.compiler.release>
+        <jpackage.version>1.0.8</jpackage.version>
     </properties>
 
     <dependencies>
@@ -204,4 +205,122 @@
             </plugin>
         </plugins>
     </build>
+    <profiles>
+        <profile>
+            <id>mac</id>
+            <activation>
+                <os>
+                    <family>mac</family>
+                </os>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.panteleyev</groupId>
+                        <artifactId>jpackage-maven-plugin</artifactId>
+                        <version>1.5.0</version>
+                        <executions>
+                            <execution>
+                                <phase>package</phase>
+                                <goals>
+                                    <goal>jpackage</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                        <configuration>
+                            <name>UIPTV</name>
+                            <input>${project.build.directory}</input>
+                            <mainClass>com.uiptv.Main</mainClass>
+                            <mainJar>UIPTV.jar</mainJar>
+                            <destination>target/dist</destination>
+                            <icon>src/main/resources/icon.icns</icon>
+                            <appVersion>${jpackage.version}</appVersion>
+                            <javaOptions>
+                                <option>-Duser.dir=$APPDIR</option>
+                            </javaOptions>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
+            <id>windows</id>
+            <activation>
+                <os>
+                    <family>windows</family>
+                </os>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.panteleyev</groupId>
+                        <artifactId>jpackage-maven-plugin</artifactId>
+                        <version>1.5.0</version>
+                        <executions>
+                            <execution>
+                                <phase>package</phase>
+                                <goals>
+                                    <goal>jpackage</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                        <configuration>
+                            <name>UIPTV</name>
+                            <input>${project.build.directory}</input>
+                            <mainClass>com.uiptv.Main</mainClass>
+                            <mainJar>UIPTV.jar</mainJar>
+                            <destination>target/dist</destination>
+                            <icon>src/main/resources/icon.ico</icon>
+                            <appVersion>${jpackage.version}</appVersion>
+                            <javaOptions>
+                                <option>-Duser.dir=$APPDIR</option>
+                            </javaOptions>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
+            <id>linux</id>
+            <activation>
+                <os>
+                    <family>unix</family>
+                    <name>linux</name>
+                </os>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.panteleyev</groupId>
+                        <artifactId>jpackage-maven-plugin</artifactId>
+                        <version>1.5.0</version>
+                        <executions>
+                            <execution>
+                                <phase>package</phase>
+                                <goals>
+                                    <goal>jpackage</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                        <configuration>
+                            <name>UIPTV</name>
+                            <input>${project.build.directory}</input>
+                            <mainClass>com.uiptv.Main</mainClass>
+                            <mainJar>UIPTV.jar</mainJar>
+                            <destination>target/dist</destination>
+                            <icon>src/main/resources/icon.png</icon>
+                            <linuxShortcut>true</linuxShortcut>
+                            <linuxPackageName>uiptv</linuxPackageName>
+                            <linuxRpmPackageName>uiptv</linuxRpmPackageName>
+                            <linuxDebPackageName>uiptv</linuxDebPackageName>
+                            <appVersion>${jpackage.version}</appVersion>
+                            <javaOptions>
+                                <option>-Duser.dir=$APPDIR</option>
+                            </javaOptions>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
 </project>
