Refactoring The work is in progress. functionality is not yet complete and unstable. [this update is not recommended]

--- a/pom.xml
+++ b/pom.xml
@@ -258,7 +258,7 @@
                 </os>
             </activation>
             <properties>
-                <javafx.platform>mac-x86_64</javafx.platform>
+                <javafx.platform>mac</javafx.platform>
             </properties>
             <build>
                 <plugins>
