--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,6 +20,12 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v6
 
+      - name: Delete old workflow run artifacts
+        uses: actions/delete-run-artifacts@v1
+        with:
+          except-artifacts: false
+          skip-recent-runs: false
+
       - name: Set up JDK ${{ matrix.java }}
         uses: actions/setup-java@v5
         with:
