--- a/pom.xml
+++ b/pom.xml
@@ -357,7 +357,7 @@
                         </executions>
                         <configuration>
                             <name>UIPTV</name>
-                            <type>DEB</type>
+                            <type>deb</type>
                             <input>${project.build.directory}</input>
                             <mainClass>com.uiptv.Main</mainClass>
                             <mainJar>UIPTV.jar</mainJar>
@@ -365,8 +365,6 @@
                             <icon>src/main/resources/icon.png</icon>
                             <linuxShortcut>true</linuxShortcut>
                             <linuxPackageName>uiptv</linuxPackageName>
-                            <linuxRpmPackageName>uiptv</linuxRpmPackageName>
-                            <linuxDebPackageName>uiptv</linuxDebPackageName>
                             <appVersion>${jpackage.version}</appVersion>
                             <javaOptions>
                                 <option>-Duser.dir=$APPDIR</option>
