--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,9 +1,11 @@
-name: Build and Package JavaFX App
+name: Build, Package and Release
 
 on:
   push:
     branches:
       - main
+    tags:
+      - 'v*.*.*'
   pull_request:
     branches:
       - main
@@ -30,7 +32,6 @@ jobs:
       - name: Build with Maven
         run: mvn -B clean package
 
-      # Upload artifacts with more flexible patterns
       - name: Upload Windows Artifacts
         if: runner.os == 'Windows'
         uses: actions/upload-artifact@v5
@@ -60,10 +61,19 @@ jobs:
             target/dist/*.dmg
             target/dist/*.pkg
 
-      # Fallback: if nothing was uploaded, upload the JAR
-      - name: Upload JAR as fallback
-        if: failure() # Only runs if previous steps fail
-        uses: actions/upload-artifact@v5
+  release:
+    runs-on: ubuntu-latest
+    needs: build
+    if: startsWith(github.ref, 'refs/tags/')
+    permissions:
+      contents: write
+    steps:
+      - name: Download all artifacts
+        uses: actions/download-artifact@v4
         with:
-          name: UIPTV-JAR-${{ matrix.os }}
-          path: target/UIPTV.jar
+          path: artifacts
+
+      - name: Create Release and Upload Artifacts
+        uses: softprops/action-gh-release@v2
+        with:
+          files: artifacts/*/*
