--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,8 +29,14 @@ jobs:
           distribution: 'temurin'
           cache: 'maven'
 
-      - name: Build with Maven
+      - name: Build with Maven (Default Profiles)
+        # This will run the default Windows, Mac, and Linux DEB/RPM/AppImage builds
         run: mvn -B clean package
+
+      - name: Generate Generic Linux Binary (TAR_GZ)
+        # Separate run to activate the new linux-generic profile
+        if: runner.os == 'Linux'
+        run: mvn -B package -P linux-generic
 
       - name: Upload Windows Artifacts
         if: runner.os == 'Windows'
@@ -50,7 +56,7 @@ jobs:
             target/dist/*.deb
             target/dist/*.rpm
             target/dist/*.AppImage
-            target/dist/*.tar.gz
+            target/dist/*.tar.gz # NEW: includes the generic binary
 
       - name: Upload macOS Artifacts
         if: runner.os == 'macOS'
