--- a/pom.xml
+++ b/pom.xml
@@ -18,10 +18,10 @@
         <maven.compiler.target>17</maven.compiler.target>
         <maven.compiler.release>17</maven.compiler.release>
         <jpackage.version>1.0.8</jpackage.version>
-        <!-- Default javafx.platform for non-profile builds -->
+        <vlcj.version>4.8.3</vlcj.version>
         <!--        <javafx.platform>mac-aarch64</javafx.platform>-->
-<!--        <javafx.platform>win</javafx.platform>-->
-                <javafx.platform>linux</javafx.platform>
+        <!--        <javafx.platform>win</javafx.platform>-->
+        <javafx.platform>linux</javafx.platform>
     </properties>
 
     <dependencies>
@@ -92,7 +92,7 @@
         <dependency>
             <groupId>uk.co.caprica</groupId>
             <artifactId>vlcj</artifactId>
-            <version>4.8.1</version>
+            <version>${vlcj.version}</version>
         </dependency>
         <dependency>
             <groupId>uk.co.caprica</groupId>
@@ -133,6 +133,8 @@
                             <goal>shade</goal>
                         </goals>
                         <configuration>
+                            <outputFile>${project.build.directory}/jpackage-app/${project.build.finalName}.jar
+                            </outputFile>
                             <transformers>
                                 <transformer
                                         implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
@@ -166,6 +168,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-dependency-plugin</artifactId>
+                <version>3.6.1</version>
                 <executions>
                     <execution>
                         <id>copy-dependencies</id>
@@ -205,6 +208,21 @@
                             <encoding>UTF-8</encoding>
                         </configuration>
                     </execution>
+                    <execution>
+                        <id>copy-web-for-jpackage</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>copy-resources</goal>
+                        </goals>
+                        <configuration>
+                            <outputDirectory>${project.build.directory}/jpackage-app/web</outputDirectory>
+                            <resources>
+                                <resource>
+                                    <directory>${basedir}/web</directory>
+                                </resource>
+                            </resources>
+                        </configuration>
+                    </execution>
                 </executions>
             </plugin>
         </plugins>
@@ -237,7 +255,7 @@
                         </executions>
                         <configuration>
                             <name>UIPTV</name>
-                            <input>${project.build.directory}</input>
+                            <input>${project.build.directory}/jpackage-app</input>
                             <mainClass>com.uiptv.Main</mainClass>
                             <mainJar>UIPTV.jar</mainJar>
                             <destination>target/dist</destination>
@@ -279,7 +297,7 @@
                             <name>UIPTV</name>
                             <vendor>SPC</vendor>
                             <copyright>Copyright © 2024 SPC</copyright>
-                            <input>${project.build.directory}</input>
+                            <input>${project.build.directory}/jpackage-app</input>
                             <mainClass>com.uiptv.Main</mainClass>
                             <mainJar>UIPTV.jar</mainJar>
                             <destination>target/dist</destination>
@@ -324,7 +342,7 @@
                             <type>DEB</type>
                             <vendor>SPC</vendor>
                             <copyright>Copyright © 2024 SPC</copyright>
-                            <input>${project.build.directory}</input>
+                            <input>${project.build.directory}/jpackage-app</input>
                             <mainClass>com.uiptv.Main</mainClass>
                             <mainJar>UIPTV.jar</mainJar>
                             <destination>target/dist</destination>
