pom and yaml upgrade for mac osx

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,7 +16,7 @@ jobs:
     strategy:
       matrix:
         os: [windows-latest, ubuntu-latest, macos-latest]
-        java: ['17.0.11+9']
+        java: ['25']
 
     steps:
       - name: Checkout code
