--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
         <maven.compiler.target>25</maven.compiler.target>
         <maven.compiler.release>25</maven.compiler.release>
         <jpackage.version>1.0.8</jpackage.version>
-        <vlcj.version>4.8.3</vlcj.version>
+        <vlcj.version>4.12.1</vlcj.version>
         <!--        <javafx.platform>mac-aarch64</javafx.platform>-->
         <!--        <javafx.platform>win</javafx.platform>-->
         <javafx.platform>linux</javafx.platform>
@@ -29,6 +29,13 @@
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
             <version>2.0.17</version>
+        </dependency>
+        <!-- SLF4J Simple binding for logging output -->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+            <version>2.0.12</version> <!-- Use a recent version compatible with your SLF4J API -->
+            <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.json</groupId>
